tests/models/struct/unnamed/i16/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    i16
);
fn main() {}
